# JPMC_assignment

./: README.md  pyproject.toml  requirements.txt
tests/: test_supper_simple_stock_market.py
trading/: supper_simple_stock_market.py
