[tool.poetry]
name = "jpmc-assignment"
version = "0.1.0"
description = ""
authors = ["Plamen Stilyianov <plamen.stilyianov@outlook.com>"]
readme = "README.md"
packages = [{include = "trading"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
